--- a/voda.tex
+++ b/voda.tex
@@ -972,4 +972,18 @@ Jedeme se Štěpánem a Pavlem, dáváme jednu jízdu + $3\times$ schody. Je cca
 
 Jedem už jenom se Štěpánem, ráno dáváme rychlou jízdu a uvažujem, jestli nepřejedem někam do Rakouska, ale i přes déšť ta nic moc nenastoupalo. Tak dáme spodek ještě jednou, $4\times$ otočíme schody. Je o pár stupňů teplejc, takže pohodička.
 
+
+\info[Vltava]{28.2.}{$20m^3/s$}
+\usek{Čerťáky}
+
+Jedu jenom na neděli, v sobotu se vracim z lyží. Ráno chytám vlak v 9:30 a jedu jednu jízdu s Radimem a budějčákama. Na další jízdu se připojuju k Šuhymu se Sosanem, dáváme druhou jízdu ze shora a jednou otočíme schody. Nakonec dáváme eště jednou spodek, nasmahnu i jez, kterej je za tohodle stavu a nastavení jezu úplně v pohodě jetelnej (jedu v levý půlce). I když to vypadá pochybně, tak na dopadu čistě do vody. Poslední jízda je trochu dramatická, nad schodama plave Slon, na schodech ještě jeden týpek (ztratil pádlo), oba to nakonec dojdou pěšky. Jinak ale pohoda, parádní pádlování - akorát byla fakt solidní zima, asi víc než minulej tejden.
+
+
+\info[Vltava]{5.3.}{$30m^3/s$}
+\usek{Čerťáky}
+
+Ještě připustili a je to úplně super. Jedu se Šuhym a Štěpánem. Je docela hezky, snad 10 stupňů, takže paráda. Teče to hezky, má to celkem sílu, ale je to dost na pohodu. S jezem hejbnuli a jet se moc nedá, takže přenášíme. Škvíru zandavám - kdy jindy než za 30. Schody mě na první pokus docela překvapí, nestihnu rozdělovák a celý to jedu dost marně, ale hned si to vynesu a druhá jízda už úplně napohodu. Další jízda je ve stejnym duchu, akorát že zvedám ve škvíře, dostanu ránu do pádla a hnu si s ramenem. Sice to ještě v pohodě dojedu na vysedačku, ale rameno celkem cejtim, nějakej tejden si asi nezapádluju - aktuálně už to mám tejden v gypsu :(
+
+
+
 \end{document}.
