--- a/voda.tex
+++ b/voda.tex
@@ -984,6 +984,38 @@ Jedu jenom na neděli, v sobotu se vracim z lyží. Ráno chytám vlak v 9:30 a 
 
 Ještě připustili a je to úplně super. Jedu se Šuhym a Štěpánem. Je docela hezky, snad 10 stupňů, takže paráda. Teče to hezky, má to celkem sílu, ale je to dost na pohodu. S jezem hejbnuli a jet se moc nedá, takže přenášíme. Škvíru zandavám - kdy jindy než za 30. Schody mě na první pokus docela překvapí, nestihnu rozdělovák a celý to jedu dost marně, ale hned si to vynesu a druhá jízda už úplně napohodu. Další jízda je ve stejnym duchu, akorát že zvedám ve škvíře, dostanu ránu do pádla a hnu si s ramenem. Sice to ještě v pohodě dojedu na vysedačku, ale rameno celkem cejtim, nějakej tejden si asi nezapádluju - aktuálně už to mám tejden v gypsu :(
 
+\akce{Kamenda}
+\datum[23.4. - 24.4.]
 
+Chystáme se se Šťepánem na Kamendu, ale ten na poslední chvíli dostane nějakou chřipku, tak improvizuju a přidávám se ke zbytku boleslaváků. Jedeme v pátek večer z Prahy na Paraplíčko, kde pogrilujem a popijem. Ráno jedou všichni na vršek, maj totiž plán jet od přehrady celou Kamendu až na Paraple. Já poprví na vodě s nataženym ramenem nechci vymejšlet blbosti, tak sem domluvenej s Pájou, že budeme jezdit jenom klasiku.
+
+\info[Kamenda]{23.2.}{$9.5m^3/s z přehrady$}
+\usek{Klasika}
+
+Jedeme $2\times$ klasikou sekci z Plavů do Jesenýho. Všechno v poklidu, žádný drama, hlavně rameno docela drží, tak sem spokojenej. Akorát při první jízdě zbytečně moc naboofnu čtyřmetrák a za tohodle malýho stavu je to fakt rána. Druhou jízdu už si to pohlídám a je to úplně na pohodu. Odpoledne mě zas Pája vyhodí na Parapli, kde čekám na zbytek. Večer trochu popijeme, ale ráno je fakt zima a hnusně, tak to vzdáváme a jedeme všichni domu.
+
+Mimochodem první řeka na Toru, dojem veskrze pozitivní ;)
+
+
+\akce{SKG}
+\datum[30.4. - 1.5.]
+
+vyrážíme s budějčákama na víkend do Rakous ve složení Šafi, Radim, Tkáňa, Profesor a na místě už na nás čeká Sudeťák a Káťou. Vyrážíme v sobotu ráno.
+
+
+\info[Saalach]{30.4.}{$30+m^3/s, 42cm Unterjettenberg$}
+\usek{Lofer}
+
+Na Loferu je střední voda, ale osobně sem to za větší nejel. V podstatě je to celý v pohodě, akorát trojkombo trochu tahá za ruce. První válec je dost podctivej, ale člověk do něj má rychlost a ve výsledku sem s nim problémy neměl. Potom klasicky pravá lajna, chce si to pohlídat náklon na pravej válec. Lžíce klasika, potom esíčko. To se imho zase trochu otevřelo vlevo, ale lajna pořád stejná. Při první jízdě jedu moc vpravo, chytne mě válec a musim se z něj tahat, zároveň i eskymuju. Naštěstí žádný drama, po  straně odtejká, takže se z něj docela snadno vytáhnu - ale trochu stres, člověk tady nechce dělat blbosti. Jinak zbytek víceméně klasika, dropíky, boofy, bomby, pohoda... Druhá jízda v pohodě, ale na třetí už sme líný. Mimochodem Toro je bomba, jenom sem si eště úplně nezvyk na ty ostrý hrany.
+
+\cara
+
+Večer přejíždíme na Lammer, spíme v pohodovym penzionku v Gollingu - 35E za noc + snídani. Snídáme mimochodem asi 2 hodiny, protože to je prostě bomba :P
+
+
+\info[Lammer]{1.5.}{$58cm Obergau$}
+\usek{klasika}
+
+Frčíme na Lammer, málo vody, ale pohoda. V řece plno napadanejch větví a stromů, ale s opatrností všechno průjezdný. O zábavu se stará Tkáňa - 2 eskymáky v první jízdě, po odjetí zjistí, že má otevřenou kapsu na vestě a nemá v ní klíče. Na štěstí mu vypadli už na nasedačce a klui z vboyz nám je hodili na vysedačku za stěrač = bomba! Další část zábavy obstarává Šafi při kryse na kataraktu a následně Radim s jeho veřejnou stolicí... Jinak žádný drama, dáváme Č jízdy a frčíme domu. Za zmínku asi stojí, že zmizel popelník :(( Už neni :(( Resp je to furt stejně úzký, ale nic se tam neděje, žádnej válec, nic... Prostě jen tekoucí volej...
 
 \end{document}.
