piemac a tessin s kyblikarema

--- a/voda.tex
+++ b/voda.tex
@@ -1018,4 +1018,82 @@ Večer přejíždíme na Lammer, spíme v pohodovym penzionku v Gollingu - 35E z
 
 Frčíme na Lammer, málo vody, ale pohoda. V řece plno napadanejch větví a stromů, ale s opatrností všechno průjezdný. O zábavu se stará Tkáňa - 2 eskymáky v první jízdě, po odjetí zjistí, že má otevřenou kapsu na vestě a nemá v ní klíče. Na štěstí mu vypadli už na nasedačce a klui z vboyz nám je hodili na vysedačku za stěrač = bomba! Další část zábavy obstarává Šafi při kryse na kataraktu a následně Radim s jeho veřejnou stolicí... Jinak žádný drama, dáváme Č jízdy a frčíme domu. Za zmínku asi stojí, že zmizel popelník :(( Už neni :(( Resp je to furt stejně úzký, ale nic se tam neděje, žádnej válec, nic... Prostě jen tekoucí volej...
 
+
+
+\akce{Piemont a Tessin}
+\datum[14.5. - 22.5.]
+
+Piemáč s Boleslavákama ve složení Dan, Pája, Štěpán, Slávoš, Jirka, Honza, Kozel a Mudra.
+
+\info[Moesa]{14.5.}{$??$}
+\usek{klasika}
+
+Dorazíme asi v 5 ráno na spaní pod most na Moese. Na rozjezd dáváme $2\times$ Moesu, má to nejmíň vody, co sem tam kdy viděl, ale dá se to v pohodě.
+
+\info[Verzasca]{14.5.}{$16 m^3/s$}
+\usek{střední}
+
+Ještě stíháme střední Verzascu, nemá to nijak moc vody, ale dá se to jet. Některý peřeje jsou dost jebačka, ale jedeme všechno. Zábava je hlavně až na posledním slajdu, kde Pája zaplave a napraskne Sweetku. Ale jinak docela v pohodě.
+
+\cara
+
+Spíme na klasikym prakovišti nad nasedačkou na střední úsek.
+
+\info[Verzasca]{15.5.}{$cca 18 m^3/s$}
+\usek{spodní}
+
+Druhej den dáváme spodní Verzascu (Dan, Slávoš, Jirka). Nasedáme na horním parkovišti, ale neseme jak žebra nad vodopádem, tak vodopád. Peřej pod vodopádem je dost v pohodě, člověk do toho jenom najede a čeká, co se stane, nedá se tam toho moc zkazit. Pak jsou tam 2 peřeje, než se vjede do vesnice. Druhá se najíždí ze středu do prava po velký plotně, dole to de na takovej blbej šutr. Nejlepší lajna je hodně do leva, vyjet na ten plochej šutr. Drop ve vesnici přenášíme, neseme i další peřej, kterou jede jenom Slávoš, dává ale dost s přehledem. Pár dalších peřejí jedeme, včetně dropu, na kterej se najíždí zleva přes plotnu a končí se boofem. Pak je jedna peřej s válcema, jedeme zleva na pravej střed a za válcem zpátky doprava. Potom neseme portage, další peřej je drop, kterej se dá jet téměř kdekoliv a pak další boof, kde je potřeba bejt hodně vlevo. Nad dropem se nějak mrdám a nestíhám vracák pravo, tak jedu rovnou. Na poslednim dropu nejsem dostatečně vlevo, spadnu pod šutr vpravo a namáčkne mě to na další šutr pod nim. Doprava nemůžu, tam jsem namáčklej, doleva proti proudu se taky nemůžu dostat abych vyzvedal, nakonec docela rychle krysim. Jsem pořád u válce, naštěstí vylezu na šutr, kde sem byl namáčklej a zkočim z něj do proudu. Odlovuje mě Slávoš. Mezi tim, co se sbírám, tak jede Dan a zaplave úplně stejně. Potom už je jenom double drop s boofama, u obou jsou docela poctivý válce, nemáme morál a všichni neseme. Další peřej jede jenom Slávoš, neseme taky. Konec, vesedáme vlevo na začátku vzdutí jezu.
+
+Kluci jedou odpoledne eště střední, mě ale pobolívá rameno, tak to šetřim a nejedu.
+
+\cara
+
+Večer přejíždíme na Ribo a spíme na Vergelettem (ještě o kus vejš, než sme spali loni, ale hodně podobný místo).
+
+\info[Ribo]{16.5.}{$spodní limit$}
+\usek{klasika}
+
+Ráno dáváme Ribo, má malou vodu, ale vypadá to, že pude. Slávoš, Dan a Jirka dávaj vodopád, všichni docela na pohodu. Potom dolu je to docela jebačka, fakt spodní limit. Jedu všechno krom klasický přenášky, jinak sem tam někdo různý místa přenáší. Všechno na pohodu, až na místo cca uprostřed - levej boof asi z metrovýho dropíku. Sem moc vpravo, dopadnu na skálu, zvrhám se a natlačí mě to vlevo na skálu. Musim se od ní trochu odstrakt, abych moh zvednout, ale v pohodě. Jinak dávaj všichni v pohodě, žádný krysy.
+
+
+\info[San Giovani]{16.5.}{$nižší stav, podobně jako loni$}
+\usek{park and huck}
+
+Rozhodnem se přejet do Piemáče, jestli tam nebudou lepí stavy, cestou dáváme San Giovani. Nemá to moc, ale v pohodě se to dá. Já si na nasedačce při první jízdě podvrknu kotník, protože sem kokot. Dávám na konec jenom jeden run, na poslednim dropu mi eště při freewheelu padá šprajda, ale cajk. Kluci to točí eště několikrát, pak frčíme směr Val Sesia.
+
+\cara
+
+Další 2 dny nepádluju, klucí jedou Mastalone, ze který vylezou hned za kaňonem, že to má málo a je to o ničem. Pak točí Balmucia klam, Sesii z Piode, pak slávoš s Mudrou a případně Jirkou jedou peřej na Sesii v Molii (dávaj v pohodě) a poslední kaňon na Sesii před soutokem se Sermenzou - dávaj taky v pohodě, něco se tam ale nosí a neni to moc dlouhý... Jedou taky Eguu, ale má to fakt hodně málo.
+
+\cara
+
+Spíme $2\times$ v kempu v Balmucii a $2\times$ pod střechou u kostela kousek nad Varallem (vysedačka se Šerpou).
+
+\info[Sermenza]{19.5.}{$nízký$}
+\usek{spodní}
+
+Jedeme spodní Sermenzu z vesnice na soutok. Celý je to dost v pohodě, jediný výraznější místo je asi 1.5 m drop kousek od nasedačky. Jede se spíš v pravo, ale nic dramatickýho. Zbytek Sermenzy je pohodička, cca WW3+ až k Balmuccia klammu.Na tom je nejtšžší vstupenka, zbytek už je za tohodle stavu takovej pohodovej aquapark.
+
+\cara
+
+Klucí jedou ráno drop na Egue, má to eště míň než minule, tak jenom park and huck.
+
+\info[Sermenza]{20.5.}{$spodní limit$}
+\usek{spodní + Sesia k prvnímu mostu}
+
+Dáváme znova Sermenzu, má to eště míň než minule, už docela spodní limit. Ale v podstatě je to dost podobný jako včera. Jedem až do Sesie až do první vesnice. Little Kanada trochu překvapuje, za takhle malý vody je to těžší, než si to pamatuju :) Jinak pohodička...
+
+\cara
+
+Na spaní přejíždíme zpátky na Verzascu. Cestou dáváme Kebab a kafíčko u Laggo Magiore, cestou padne pár Lamb, večer nějaký Grappa a Jameson, kvalitní přejezdovej večírek ;)
+
+\info[Verzasca]{21.5.}{$11m^3/s$}
+\usek{spodní}
+
+Nasedáme nad Ježíšem, Jedeme na vodě úplně všichni najednou!! Pár lidí to vzdá za čertovou strouhou. Za zmínku stojí potápěči, který potkáváme v Lavertezzu v laguně pod mostem. Je jich tam hromada... Jedeme peřej ve vesnici úplně vlevo, za tohodle stavu je to dost v pohodě. Stačí to najet vlevo po slajdu se špičkou do prava, skočit za roh do prava, a pak se zase hned vrátit do leva. Tady končí Štěpán a zaplave Honza a taky končí. Dál jedeme s Danem, Slávošem, Jirkou a Mudrou. Krom Slávoše všichni nesem prsty, pak v pohodě jedem až k přenášce. To je snad nejtěžší číst řeky, s tim mym kotníkem. Ve větší peřeji za přenáškou dávám dost marnou lajnu, jedu moc v pravo a do něčeho tam dám čelo, v zápětí zvedám ve válci a pak si dávám ještě poslední válec bokem, ale ten už je v pohodě... Nicméně dál pokračujeme v pohodě, dokonce si oba s Danem opravujeme našeme plavání. Pak dávám i další dva boofy, v prvním zmizim dost pod vodou, druhej si ale dost hlídám a najíždim na pohodu. V poslední peřeji Slávoš končí ve vracáku / kolovadle vlevo, nedá se odtud vypádlovat, tak ho s Danem na lanech vytáhnem na břeh. Po tomhle divadlu všichni přenášíme a pak už jenom dojíždíme.
+
+\cara
+
+Potom chvíli pozevlíme pod mostem na nasedačce střední, dáme oběd a nějaký plavání a vyráříme k domovu. Po druhý jsme v Bubovicích, ještě vezu domu Mudru a Honzu + zastávka na Troje, ve 4 jsem doma.
+
 \end{document}.
