--- a/voda.tex
+++ b/voda.tex
@@ -1096,4 +1096,104 @@ Nasedáme nad Ježíšem, Jedeme na vodě úplně všichni najednou!! Pár lidí
 
 Potom chvíli pozevlíme pod mostem na nasedačce střední, dáme oběd a nějaký plavání a vyráříme k domovu. Po druhý jsme v Bubovicích, ještě vezu domu Mudru a Honzu + zastávka na Troje, ve 4 jsem doma.
 
+
+
+\akce{Rakousko, Itálie}
+\datum[3.7. - 10.7.]
+
+Se Štěpánem, Zukzkou, Pepem a Ondrou.
+
+
+\info[Taugl]{3.7.}{$nižší střední$}
+\usek{vodopád}
+2xh
+
+3x, pohoda, super
+
+\info[Defereggenbach]{4.7.}{$70cm Hopfgarten$}
+\usek{horní}
+
+Jedeme až na konec cesty (k zákazu vjezdu) - cca 2 km nad přenáškou (vodopád). Hned na začátku nám zaplave Zuzka, naštěstí to docela rychle odlovíme a pokračujeme. Je to hodně kontinuální, žádný vracáky, ale nic zásadního tam neni. Jediná výraznější peřej je nakonci kaňonku, kdy se silnice vrací k řece. Lepší jet u levý strany (levej střed), nicméně na prohlížení neni moc prostor. Před přenáškou končí Zuzka i Štěpán, je to nan ně moc kontinuální (je dobře, že končí). Dál jedem s Pokorňákem a Pepem. Po přenášce je to všechno o půl stupňě těžší, teče to trochu víc z kopce, peřeje jsou výraznější. Žádná vyloženě nevyčnívá, ale prvních cca 500 m je asi nejtěžších. Jinak je to všechno v pohodě, ale poctivý kontinuální WW4. Všude ale stačí jet s vodou, špičku po proudu, všechno boofovat a vyhejbat se štutrům.
+I s přenáškou a lovením Zuzky jedeme asi 1:15. Reálně na vodě je to tak 20 + 15 min. Stav si myslím naprosto optimální, neni to jebačka, ale eště to ani neni nakoupený. Na vysedačce u mýta to vypadá, že tý vody neni moc, ale šlo by to.
+
+
+\info[Defereggenbach]{4.7.}{$68cm Hopfgarten$}
+\usek{Standardstrecke}
+2x
+
+
+\info[Ahrnbach]{4.7.}{$45m^3/s St....$}
+\usek{Schloss}
+
+Má to docela dost vody. Asi tolik, že za celou cestu nechytneme jedinej vracák, ale celkově je to 7 min na vodě, takže se to dá přežít. V podstatě když člověk zná lajny, tak je to v pohodě, možná lepší, než za menších stavů, že se nemusí tolik kličkovat mezi šutrama, je to docela dost zalitý. Jedeme s Ondrou a Pepem, všichni v klidu...
+
+\cara
+Spíme klasicky u lezecký skály. Akorát nás tam ráno před devátou překvapujou nějaký lezci, tak se rychle balíme a jedeme na snídani na Reinbach.
+
+
+\info[Reinbach]{6.7.}{$nízký$}
+\usek{Galerie}
+
+Zkoušíme s Pepem (asi) nejhornější úsek na Reinbachu (začátek i konec viz kilometráž Pustertal, akorát je to spíš 1km než 2km). Má to docela málo vody, ale popravdě o moc víc by tam člověk nechtěl. Těžko říct, jestli to má vůbec nějakej optimální stav. Takhle je to dost jebačka, hodně toho prohlížíme a dost často jsou lajny hodně přes šutry. Nicméně je to hodně z kopce, většina toho nejde prohlídnout z lodi, tak každou chvíli vylejzáme. Jedeme všechno, krom asi nejprudší peřeje u konce, kde jsou 2 dvoumetrový dropy za sebou, ale ten druhej padá naprosto do šutrů a nemá žádnou rozumnou lajnu. Končíme u mostu, pod kterym je cca 3m vysokej drop. Neni nijak těžkej, ale ani nejde moc dobře najet, já boofuju tak napůl, Pepe pod nim chvíli visí ve válci, ale poměrně snadno se z něj vytáhne.
+
+
+\info[Rienz]{6.7.}{$>80m^3/s$}
+\usek{Rienzschlucht}
+
+Rienz nás trochu překvapuje, místo klasickýho minimálního průtoku teče hromada vody přes hráz. Od hráznýho zjišťujeme, že teče přes 80 kubíků a už by připouštět neměli, leda by se stali něco na elektrárně v Brixenu (připustili by do koryta dalších 50). Podle předpokladů je to poměrně big water. První peřej najíždíme z leva do prava, na konci u pravý strany. Druhou peřej je možný jet středem s vodou a postupně se tlačit doleva, kde je dobrý chytit vracák u levýho břehu a prohlídnout ``esíčko'', kde je poměrně moc nej válec. Druhá varianta je chicken lajana úplně vlevo u břehu, ale chytá se stejnej vracák před esíčkem. To jede jenom Pepe, ostatní neseme. Třetí velká peřej je asi největší, nejde před ní moc zastavit a zkouknout pravou lajnu (hlavní proud), takže to šidíme celý u levýho břehu, kde teče míň vody. Tady je to poměrně bez problémů a postupně se dá vrátit do hlavního proudu v pravo. Pusta lecho je fakt mocný, neseme vpravo lesem, neodhodláme se ani na poslední peřejku, bylo by tam hodně obtížný vyjet z pravýho vracáku do proudu a dostat se na střed.
+
+Další peřeje už jsou přehlednější a míň z kopce, ale pořád se v nich skrývaj solidní válce. Nicméně už jedeme bez vylejzání, vcelku se to dá většinou prohlídnou z vody. Nicméně pořád je tam několik poměrně poctivých peřejí, zejména u 1m boofu je mocnej válce přes celou řeku, jetelný u levý strany. Kousek před tim je hodně podobnej vlvnoválec přes celou řeku, jetelnej po krajích. Nejmocnější je asi peřej, která obvykle vypadá hodně zablokovaná a jezdí se vlevo. Začátek je sice poměrně dobrej, ale končí to mocnym válcem, kterej je přes celou řeku a odtejká jenom u kraje vlevo. Pepe jede zprava doleva, válec míjí jenom na kraji, ale stejně ho zastaví a docela mocně se z něj tak akorát vytahuje. Moc nás nenamotivoval, tak přenášíme. Ještě ke konci na nás z ničeho nic vykoukne nová peřej vzníklá závalem zprava, jedeme ze středu do leva, potřeba minout válec u pravý strany. Je to velký, ale v pohodě. Pak už je to až do konce v pohodě. Jedeme s prohlížením a přenáškama 3 hodiny.
+
+\cara
+
+Spíme u maštale, ráno přejíždíme na Passer (jedeme přes Bolzano a Merano). Passer má nicméně poměrně málo, Štěpa se Zuzkou jedou nějakej spodnější 3-4 úsek, s Pepem prohlížíme finálovou sekci KOTA (má málo) a kaňon (je hrozně poctivej). Nakonec nic nepádlujeme, spíme na horním Passeru a ráno jedeme na Ötz.
+
+
+\info[Venter Ache]{8.7.}{$235cm Tumpen$}
+\usek{Horní}
+
+Jedeme s Pepem horní venter z Ventu na nasedačku Heiligu. Zpočátku je to poklidná WW3, ale když se objeví silniční galerie, začne ro padat dost z kopce. Jednotlivý peřeje nemá smysl popisovat, je to několik kiláků kontinuálních peřejí. Žádná extra nevyniká, krom první jde všechno prohlídnout z lodi. První jet z leva do prava. Peřej u silničního mostu neseme, ale lajny tam jsou. K mostu jedeme 40min. Úsek pod mostem je asi nejtěží, ale neliší se to až o tolik od hodního úseku. Je potřeba si prohlídnout vysedačku, před Heiligem člověk chce zastavit.Celkově jedem asi 1:15.
+
+
+\info[Otz]{8.7.}{$235cm Tumpen$}
+\usek{Spodní}
+
+Chtělo by to víc.
+
+
+\info[Venter Ache]{9.7.}{$243cm Tumpen$}
+\usek{Spodní}
+
+Je to pořád dost v pohodě, sice to sype, ale žádný velký válce tam eště nejsou, jedeme celkem v pohodě. Já zvedám v peřeji nad mostem, ale sem po večírku a sem trochu marnější. Jinak OK.
+
+
+\info[Otz]{9.7.}{$245cm Tumpen$}
+\usek{Spodní}
+
+Eště víc, ale je to zábava. Štěpán se Zuzkou jedou až do Innu, my s Pepem vysedáme na konci Ötzu a pendlujem. Pak dáváme pejezd na pískovnu na Lofer.
+
+
+\info[Saalach]{10.7.}{$35cm Unterjettenberg$}
+\usek{Lofer}
+
+V neděli dáváme $2x$ Lofer za pohodovýho stavu, Štěpán ho jede poprví. Všechno v poklidu v obou jízdách, na vypádlování parádní. Po poledni vyrážíme domu.
+
+
+
+\akce{Prší -> Jizerky}
+\datum[14.7.]
+
+Nádherně prší, takže beru půl dnes dovolený a vyrážíme se Spacim a Štěpánem do Jizerek. Obvykle ale jedeme ve větších skupinkách, na Mejtě je lidí plno :)
+
+
+\info[Mumlava]{14.7.}{$11m^3/s~-~15m^3/s$}
+\usek{Klasika}
+
+Jedeme $3x$ Mumlavu, pokaždý je o trochu víc vody. Po Jizeře dávám ještě 4. na vypádlování s Danem, Jirkou a Zuzkou. Je to super, nejvíc, co sem to zatim jel, ale celý je to v pohodě a hrozně zábavný. Jez nosíme.
+
+\info[Jizera]{14.7.}{$80 - 90m^3/s$}
+\usek[Mejto]{Vilémov}
+
+Jizera je hodně nakoupená, jedem ve skupince cca 8 lidí. Nejtěžší je začátek - k ostrovu hrůzy. Je to dost kontinuální, velký vlny a sem tam nějakej mocnej válec, na druhou stranu všechno to vypadá, že to docela vyplachuje. Ostrov prohlížme z prava. Lajna tam určitě je, ale kdyby jí člověk nedal, tak by to mohlo dopadnout celkem zajímavě. Všichni neseme. Pod ostrovem je to o trochu lehčí, ale charakterově pořád stejný. Jedem všichni celkem bez problémů, ale taky dost opatrně. Druhou jízdu by si člověk určitě užil víc. Nicméně za tohodle stavu je to docela velký, ale poměrně přehledný, všemu se dá vyhnout.
+
 \end{document}.
