--- a/voda.tex
+++ b/voda.tex
@@ -1196,4 +1196,65 @@ Jedeme $3x$ Mumlavu, pokaždý je o trochu víc vody. Po Jizeře dávám ještě
 
 Jizera je hodně nakoupená, jedem ve skupince cca 8 lidí. Nejtěžší je začátek - k ostrovu hrůzy. Je to dost kontinuální, velký vlny a sem tam nějakej mocnej válec, na druhou stranu všechno to vypadá, že to docela vyplachuje. Ostrov prohlížme z prava. Lajna tam určitě je, ale kdyby jí člověk nedal, tak by to mohlo dopadnout celkem zajímavě. Všichni neseme. Pod ostrovem je to o trochu lehčí, ale charakterově pořád stejný. Jedem všichni celkem bez problémů, ale taky dost opatrně. Druhou jízdu by si člověk určitě užil víc. Nicméně za tohodle stavu je to docela velký, ale poměrně přehledný, všemu se dá vyhnout.
 
+
+\akce{Letní Otz}
+\datum[23.-26.7.]
+
+S Ježurou, Dominikou a Vojtou Pražanem.
+
+
+\info[Sanna]{23.7.}{$30m^3/s~Landeck$}
+\usek{Spodní}
+
+Na rozjetí jedeme Sannu eště s nějakou skupinkou Ježurovo kamarádů. Nasedačka je u mostu na soutoku Rosany a Trisany, vysedáme kousek za velkym dálničnim mostem. Je to záležitost tak na 30 min. Je to pohodovej úsek WW3, kontinuální, ale nikde nic dramatickýho. Sneslo by to klidně i výrazně víc vody.
+
+\info[Otz]{23.7.}{$230cm Tumpen$}
+\usek{Spodní}
+
+Dáváme spodní Ötz až do Heimingu, klasika.
+
+
+\info[Venter Ache]{23.7.}{$250cm Tumpen$}
+\usek{Spodní}
+
+Na vodočtu v Tumpenu je cca 235cm, ale má to výrazně víc vody, než když sme to jeli před 2ma tejdnama s Pepem (243cm). Přijde mi to jako stejnej stav jako na Pokorňákově videu za 275cm. Chtělo by to zkouknout asi eště nějaký jiný vodočty, který tomu víc odpovídaj. Na nasedačce, když se kouká proti proudu, kouká z vody jenom jeden kamen a přes něj cáká voda (podle toho by to šlo relativně odhadnout). Na nasedačce to nevypadá tak strašně, tak jedeme s Ježurou i Vojtou. Nicméně je to fakt mocný, valí to dolu a válce sou fakt velký. Musim jednou zvedat v prvnim kaňonku, kdy jedu moc vpravo po pekelnym bubláku u skály a nějak mě to tam zvrhá. Vojta zvedá asi $3\times$ až nakonec vyplave v prusší části nad kataraktíkem mezi 2ma mostama. Ježura ho naštěstí docela rychle dostane na břeh, ale loď i pádlo uplave.My to pak s Ježurou dojíždíme, už relativně v pohodě, ale z některejch válců de pořád docela strach.
+
+
+\info[Otz]{24.7.}{$225/240cm Tumpen$}
+\usek{Spodní}
+
+Dáváme znova spodní Ötz na zablbnutí, jeden jedem kolem poledne za celkem malý vody, další jedeme večer jenom já s Dominikou a to už se celkem dá.
+
+
+\info[Otz]{23.7.}{$235cm Tumpen$}
+\usek{Lesní}
+
+Lesní je docela nakoupená, je to relativně poctivý, ale vypadá to dobře. Jenže v první peřeji si Ježura něco udělá s rukou a nemůže jet dál, takže sme si sjeli asi jenom 500m :(
+
+
+
+\akce{Olympijský Lipno}
+\datum[6.-21.8.]
+
+Během Ria pouští z přehrady 15 kubíků -> pádlujeme!
+
+
+\info[Vltava]{6.8.}{$15m^3/s$}
+\usek{Čerťáky}
+
+Jezdim s Alčou a Mišuem a s Šafim, Tazim, budějčákama. 15 kubíků pohodička, pocitově mi to připomíná spíš 10 než 20, ale je to zábava. První jízdu jedeme od hráze, $3\times$ dáme schody. Okno je otevřený, což je bomba, takže nosíme jenom škvíru. Druhou jízdu z Loučovic dávám schody $4\times$. Potom už nějak všichni končí a já jedu eště nahoru, nakonec dávám poslední jízdu solo, za celou cestu od hráze na vysedačku potkávám jenom 2 skupinky kajakářů, když si dávám chvíli pauzu před oknem. Bomba.
+
+Za zmínku stojí, že celý pendlujem vlakem, na kterej je nějaká akce v rámci olypijskýho parku - za jeden lístek (18Kč) dostáváme pásku na 2 tejdny = vlak zdarma. Platí se jenom 10Kč za lodě :)
+
+\cara
+Spíme přímo pod hrází, večer nakouknem do olympijskýho parku a dáváme společně s boleslavákama, surikatama, heletágama a ještě dalšíma příjemnej večírek ;)
+
+
+\info[Vltava]{7.8.}{$15m^3/s$}
+\usek{Čerťáky}
+
+Jezdim s boleslavákama, přece jenom už neni taková motivace, dáváme 2 jízdy, $4\times$ schody, pak si ještě dávám hořejšek s taťkou a vyrážim domu. 
+
+
+
 \end{document}.
