--- a/voda.tex
+++ b/voda.tex
@@ -1257,4 +1257,54 @@ Jezdim s boleslavákama, přece jenom už neni taková motivace, dáváme 2 jíz
 
 
 
+\akce{Srpnový Tyrolsko}
+\datum[13.-16.8.]
+
+Přidávám se ke klukům z Budějc - Kuba Staněk, Venca Šíma a Vojta Šíp - vyrážíme popádlovat na 4 dny.
+
+\info[Lammer]{13.8.}{$90cm~Obergau$}
+\usek{Lammeröffen}
+
+Lammer má pěknou vodu, spíme pod mostem a ráno to tam rovnou nahazujem. První skok je zalitej, vpravo je válec, vleno průjezd jazykem. Vstupenka je relativně v pohodě, celá je lepší jet zleva. V jednný jízdě dávám největší válec na komoru, natáhne si mě zpátky a chvíli si tam podribluju, ale nakonec z něj vyjedu. Katarakt je lepší najet víc vlevo, šikmá roláda v níjezdu človkě odsadí dost doprava, je dobrý si to pohlídat. Ale jinak je ta lajna docela čistá. Potom všechny ostatní peřeje se jezdí tak nějak klasicky jako vždycky. Jedeme $4\times$, z toho každej jednou pendluje. Kuba poslední jízdu zvedal v kataraktu a dostal docela do ramene a do krku, takže další 2 dny moc nepádluje.
+
+\cara
+
+Klucí se chtěj kouknout na Taugl. Já nejedu, bolí mě trochu záda ještě z minula. Voda je taková střední, na pohodu. Jedou Venca s Vojtou, Vojta krysne, ale sám se odloví. Venca jede na pohodu, ale na druhej run se nikomu nechce. Dáváme oběd a jedeme na Isel.
+
+
+\info[Isel]{13.8.}{$290cm~Lienz$}
+\usek{Pod kataraktem}
+
+Večer dáváme na vypádlování Isel, překvapivě je to docela hezká voda.
+
+
+\info[Tauernbach]{14.8.}{$170cm~Prosegg$}
+\usek{Standardstrecke}
+
+Dáváme s Vencou standardku
+
+
+\info[Isel]{14.8.}{$280cm~Lienz$}
+\usek{Pod kataraktem}
+
+Dáváme párkrát Isel.
+
+
+\info[Defereggenbach]{15.8.}{$55cm~Hopfgarten$}
+\usek{Wasserfallstrecke}
+
+Dáváme jenom s Vencou wasserfall, má to docela dost vody, takže trochu morálovka, ale aspoň to neni takovej pojeb k tomu dojet. První drop má trochu lehčí nájezd než za menší vody, ale o to je tam větší válec. Nicméně člověk tam má docela rychlost a dáváme to v pohodě. Druhej drop jedu pravou lajnu, chci jet na přímo, ale dost mě podrží válec na vstupu, vytahuju se z něj tak akorát na hraně a chytám vracák. Pak už je to pohodička. Za týhle vody to chce buď najet zleva nebo to poslat co nejvíc do toho vracáku. Spokedk už je pohodovej, všechno čistý bez žádnejch blbejch stromů.
+
+
+\info[Isel]{15.8.}{$105cm~Hinterbichl$}
+\usek{Horní}
+
+Na vypádlování dáváme horní Isel za pěkný vody, záležitost na 25min.
+
+
+\info[Saalach]{15.8.}{$48cm~Unterjettenberg$}
+\usek{Lofer}
+
+Spíme na štěrkovně a dáváme Lofer za docela velký vody. Popravdě už je to na mě skoro moc a neužívám si to zas až tolik, jako obvykle. Oproti 42cm, co sem to jel na jaře, je tý vody výrazně víc a je to značně těžší. Trojkombo nesu, je v něm strom. Nakonec to dávám až pod esíčkem, moc se mi to nelíbí. Venca dává nad lžící, v tý dobře zmizí a svícuje, ale v pohodě. Esíčko dává úplně na pohodu. Zbytek už jedeme víceméně klasický lajny. S tou přenáškou mě to moc nebaví, dáváme jenom jedu jízdu a jedeme domu.
+
 \end{document}.
