--- a/voda.tex
+++ b/voda.tex
@@ -58,7 +58,7 @@
 \newglossaryentry{#2}%
 {name={#2},description={\nopostdesc}}}
 
-%prvni je pro vygereovani glossaries, druhý je pro latetex po zavolání -makeglossaries voda- v bashi
+%druhý je pro vygereovani glossaries, první je pro latetex po zavolání -makeglossaries voda- v bashi
 \newcommand{\mygls}[1]{\ifglsentryexists{#1}{\gls{#1}}{\textcolor{blue}{\underline{#1}}}}
 %\newcommand{\mygls}[1]{\ifglsentryexists{#1}{\gls{#1}}{\newterm{#1}\gls{#1}}}
 
@@ -1256,6 +1256,17 @@ Spíme přímo pod hrází, večer nakouknem do olympijskýho parku a dáváme s
 Jezdim s boleslavákama, přece jenom už neni taková motivace, dáváme 2 jízdy, $4\times$ schody, pak si ještě dávám hořejšek s taťkou a vyrážim domu. 
 
 
+\info[Vltava]{20.8.}{$21m^3/s$}
+\usek{Čerťáky}
+
+Klasický čerťáky, jezdim většinou s Vencou a Štěpánem... Jezdíme jenom spodek, dáváme 5 jízd, $6\times$ schody, pendlujeme vlakem, večer pokalíme... Vše jak má bejt.
+
+
+\info[Vltava]{21.8.}{$21m^3/s$}
+\usek{Čerťáky}
+
+V neděli už dáváme jenom na pohodu 2 jízdy spodku, jednou si vynesu schody, ale jinak to už moc nehrotíme a po poledni jedem domu.
+
 
 \akce{Srpnový Tyrolsko}
 \datum[13.-16.8.]
@@ -1302,9 +1313,32 @@ Dáváme jenom s Vencou wasserfall, má to docela dost vody, takže trochu morá
 Na vypádlování dáváme horní Isel za pěkný vody, záležitost na 25min.
 
 
-\info[Saalach]{15.8.}{$48cm~Unterjettenberg$}
+\info[Saalach]{16.8.}{$48cm~Unterjettenberg$}
 \usek{Lofer}
 
 Spíme na štěrkovně a dáváme Lofer za docela velký vody. Popravdě už je to na mě skoro moc a neužívám si to zas až tolik, jako obvykle. Oproti 42cm, co sem to jel na jaře, je tý vody výrazně víc a je to značně těžší. Trojkombo nesu, je v něm strom. Nakonec to dávám až pod esíčkem, moc se mi to nelíbí. Venca dává nad lžící, v tý dobře zmizí a svícuje, ale v pohodě. Esíčko dává úplně na pohodu. Zbytek už jedeme víceméně klasický lajny. S tou přenáškou mě to moc nebaví, dáváme jenom jedu jízdu a jedeme domu.
+
+
+\akce{Podzimní SKG}
+\datum[15.-16.10.]
+
+Nikde už neni voda, tak s Kubou a Štěpánem vyrážíme na Lofer. V pátek večer přespíme doma a ráno v klidu vyrážíme. Trošku napršelo, takže nejdřív zkoušíme Lammer.
+
+\info[Lammer]{15.10.}{$73cm~Obergaeu$}
+\usek{Lammeröffen}
+
+Na místě sice zhisšťujeme, že je to až do prosince zavřený kvůli stavbě mostu, ale nikdo tam nic nedělá a nevypadá to ani na žádnej problém v řece, tak jedem. Je to super, parádní pohodovej stav, sluníčko, dáváme 5 jízd a po poledni přejíždíme na Lofer.
+
+
+\info[Saalac]{15.10.}{$26cm~Unterjettenberg$}
+\usek{Lofer}
+
+Odpoledne dáváme eště 2 jízdy na Loferu, přjemnej a klasicky zábavnej stav, žádnej problém. Spíme na štěrkovně.
+
+
+\info[Saalach]{16.10.}{$22cm~Unterjettenberg$}
+\usek{Lofer}
+
+Přes noc to trochu naklesalo, ale ve výsledku to neni až zas takovej rozdíl. Dáváme 3 rychlý jízdy, je parádní počasí a je to prostě super. Nicméně kolem jedný vyrážíme domu, Štěpán potřebuje bejt v Praze v 7, aby stihnul taneční :O. Aspoň, že sme to tak tak stihli... Za dva tejdny snad jedeme zase :)
 
 \end{document}.
