dopsani podzimniho rakouska

--- a/voda.tex
+++ b/voda.tex
@@ -58,7 +58,7 @@
 \newglossaryentry{#2}%
 {name={#2},description={\nopostdesc}}}
 
-%druhý je pro vygereovani glossaries, první je pro latetex po zavolání -makeglossaries voda- v bashi
+%druhý je pro vygereovani glossaries, první je pro latex po zavolání -makeglossaries voda- v bashi
 \newcommand{\mygls}[1]{\ifglsentryexists{#1}{\gls{#1}}{\textcolor{blue}{\underline{#1}}}}
 %\newcommand{\mygls}[1]{\ifglsentryexists{#1}{\gls{#1}}{\newterm{#1}\gls{#1}}}
 
@@ -1330,7 +1330,7 @@ Nikde už neni voda, tak s Kubou a Štěpánem vyrážíme na Lofer. V pátek ve
 Na místě sice zhisšťujeme, že je to až do prosince zavřený kvůli stavbě mostu, ale nikdo tam nic nedělá a nevypadá to ani na žádnej problém v řece, tak jedem. Je to super, parádní pohodovej stav, sluníčko, dáváme 5 jízd a po poledni přejíždíme na Lofer.
 
 
-\info[Saalac]{15.10.}{$26cm~Unterjettenberg$}
+\info[Saalach]{15.10.}{$26cm~Unterjettenberg$}
 \usek{Lofer}
 
 Odpoledne dáváme eště 2 jízdy na Loferu, přjemnej a klasicky zábavnej stav, žádnej problém. Spíme na štěrkovně.
@@ -1340,5 +1340,41 @@ Odpoledne dáváme eště 2 jízdy na Loferu, přjemnej a klasicky zábavnej sta
 \usek{Lofer}
 
 Přes noc to trochu naklesalo, ale ve výsledku to neni až zas takovej rozdíl. Dáváme 3 rychlý jízdy, je parádní počasí a je to prostě super. Nicméně kolem jedný vyrážíme domu, Štěpán potřebuje bejt v Praze v 7, aby stihnul taneční :O. Aspoň, že sme to tak tak stihli... Za dva tejdny snad jedeme zase :)
+
+
+\akce{Podzimní SKGv2}
+\datum[28.-30.10.]
+
+Opakujeme předchozí vydařenou akci ve složení Kuba, Venca a Jelen.
+
+\info[Saalach]{28.10.}{$28cm~Unterjettenberg$}
+\usek{Lofer}
+
+Jedeme $5\times$ a nenudíme se (teda jak kdo, ale mě prostě Lofer baví) :)
+
+
+\info[Salzach]{29.10.}{$110-80cm~Golling$}
+\usek{Salzachöffen}
+
+Jedeme $3\times$, první jídu máme asi střední vodu, 110cm, ale každou jízdu je míň, poměrně dost to klesá.
+
+Nastupujem kousek nad mostem, ale imho nejlepší nasedačka je přímo u mostu, kde jsou schůdky k vodě. Při první jízdě, kdy je nejvíc vody, je voda na úrovni spodní vodorovný části navigace (část je pod vodou, část nad vodou). Je to dobrá reference pro případ, že by se voda výrazně změnila oproti scoutování z mostu. Jinak je to poměrně na pohodu, v zasiflený peřeji jezdíme lajnu u pravý strany a pak takovym průskokem napřed. Je to poměrně v pohodě a pocitově mi to přijde nejbezpečnější. Do leva se nám moc nechce, i když během tý třetí jízdy už by to asi bylo na pohodu.
+
+
+\info[Lammer]{29.10.}{$54cm~Obergaeu$}
+\usek{Lammeröffen}
+
+Jedeme $2\times$. Na jednu jízdu si půjčuju od Vojty tyčku dozadu na kameru a samozřejmě už ve vstupence zavadim o strom a kameru ulomim. Naštěstí si jí po chvíli Vojta ze vbřehu všimne, jak se na dně blejská tyčka, moc daleko neodplavala. Takže nakonec kamera zachráněna :)
+
+\info[Enns]{30.10.}{$5.6m^3/s$}
+\usek{Kummer}
+
+Jedeme si s jednim rakušákem. Je poměrně málo vody, ale jetelný to je. Podle imformační tabule u hráce je do 15.10. minimum 7 kubíků a to by bylo určitě rozumnější. Reálně tak do 20ti by to mělo bejt v pohodě, za víc už by to asi dost teklo a bylo by dobrý to mít trochu víc najetý. Vhodný je končit už u prvního mostu. Jedeme až k druhýmu, ale jednak se tam špatně vysedá, navíc už ten zbytek nestojí za nic + první místo za mostem má vpravo nepěknej sifon a je to potřeba prohlídnout / pohlídat.
+
+\info[Enns]{30.10.}{$48cm~Admont$}
+\usek{Gesause-eingang}
+
+Potom ještě s tím Rakušákem přejíždíme na Gesause a dáváme dva runy. Je to poměrně v pohodě, první peřej najíždíme levou lajnou, v pravo sou stromy. Potom se celou dobu jede takovej levej střed, válec před pyramidou bereme zleva, potom i pyramidu objíždíme zleva, potom zpátky do proudu a traverz do prava. Nicméně za tohodle stavu jsou kolem pyramidy možný asi všechny lajny - jak vpravo, tak i středem. Jde o to si jenom vybrat. Zbytek už se dojíždí v klidu u pravý strany.
+
 
 \end{document}.
